--- a/angular/angular-app/src/app/app.component.html
+++ b/angular/angular-app/src/app/app.component.html
@@ -1,17 +1,3 @@
-<button
-  *ngIf="!auth.isLoggedIn"
-  (click)="auth.login()">
-    Log In
-</button>
-
-<button
-  *ngIf="auth.isLoggedIn"
-  (click)="auth.logout()">
-    Log Out
-</button>
-
-<nav>
-    <a *ngIf="auth.isLoggedIn" routerLink="/ingredients">My Tasks</a>
-</nav>
-
+<app-banner></app-banner>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
