--- a/angular/angular-app/src/app/ingredient-list/ingredient-list.component.html
+++ b/angular/angular-app/src/app/ingredient-list/ingredient-list.component.html
@@ -1,24 +1,30 @@
 <h2>List of Ingredients</h2>
 
-<ul>
-    <li *ngFor="let ingredient of ingredients$ | async">
-
-        <form #f="ngForm" (ngSubmit)="putIngredient(ingredient)">
-
-            Name: <input #name="ngModel" type="text" name="name" [(ngModel)]="ingredient.name" [disabled]="!ingredient.isEditable" required/>
-            <div *ngIf="name.invalid && name.errors.required">Name is required</div>
-            <br>
-      
-            Description: <input #description="ngModel" type="text" name="description" [(ngModel)]="ingredient.description" [disabled]="!ingredient.isEditable" required/>
-            <div *ngIf="description.invalid && description.errors.required">Description is required</div>
-            <br>
-      
-            <button *ngIf="!ingredient.isEditable" (click)="ingredient.isEditable=!ingredient.isEditable">Edit</button>
-            <button type="submit" *ngIf="ingredient.isEditable" [disabled]="f.form.invalid">Save</button>
-            <button type="button" (click)=deleteIngredient(ingredient.id)>Delete</button>
-          </form>
-    </li>
-</ul>
+<mat-accordion>
+    <mat-expansion-panel *ngFor="let ingredient of ingredients$ | async">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    {{ingredient.name}}
+                </mat-panel-title>
+                <mat-panel-description>
+                    {{ingredient.description}}
+                </mat-panel-description>
+            </mat-expansion-panel-header>
+            <form #f="ngForm" (ngSubmit)="putIngredient(ingredient)">
+                Name: <input #name="ngModel" type="text" name="name" [(ngModel)]="ingredient.name" [disabled]="!ingredient.isEditable" required/>
+                <div *ngIf="name.invalid && name.errors.required">Name is required</div>
+                <br>
+        
+                Description: <input #description="ngModel" type="text" name="description" [(ngModel)]="ingredient.description" [disabled]="!ingredient.isEditable" required/>
+                <div *ngIf="description.invalid && description.errors.required">Description is required</div>
+                <br>
+        
+                <button *ngIf="!ingredient.isEditable" (click)="ingredient.isEditable=!ingredient.isEditable">Edit</button>
+                <button type="submit" *ngIf="ingredient.isEditable" [disabled]="f.form.invalid">Save</button>
+                <button type="button" (click)=deleteIngredient(ingredient.id)>Delete</button>
+            </form>
+    </mat-expansion-panel>
+</mat-accordion>
 
 <h2>Create a Task</h2>
 <form [formGroup]="ingredient_form" (ngSubmit)="onSubmit()">
