Improved look of UI

--- a/angular/angular-app/src/app/app.component.html
+++ b/angular/angular-app/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-banner></app-banner>
 <app-navbar></app-navbar>
+
+<button mat-icon-button color='primary' aria-label="icon-edit">
+    <mat-icon >icon-edit</mat-icon>
+</button>
 <router-outlet></router-outlet>
