--- a/angular/angular-app/src/app/ingredient-list/ingredient-list.component.html
+++ b/angular/angular-app/src/app/ingredient-list/ingredient-list.component.html
@@ -10,19 +10,33 @@
                     {{ingredient.description}}
                 </mat-panel-description>
             </mat-expansion-panel-header>
-            <form #f="ngForm" (ngSubmit)="putIngredient(ingredient)">
-                Name: <input #name="ngModel" type="text" name="name" [(ngModel)]="ingredient.name" [disabled]="!ingredient.isEditable" required/>
-                <div *ngIf="name.invalid && name.errors.required">Name is required</div>
-                <br>
-        
-                Description: <input #description="ngModel" type="text" name="description" [(ngModel)]="ingredient.description" [disabled]="!ingredient.isEditable" required/>
-                <div *ngIf="description.invalid && description.errors.required">Description is required</div>
-                <br>
-        
-                <button *ngIf="!ingredient.isEditable" (click)="ingredient.isEditable=!ingredient.isEditable">Edit</button>
-                <button type="submit" *ngIf="ingredient.isEditable" [disabled]="f.form.invalid">Save</button>
-                <button type="button" (click)=deleteIngredient(ingredient.id)>Delete</button>
-            </form>
+            <ng-template matExpansionPanelContent>
+                <form #f="ngForm" (ngSubmit)="putIngredient(ingredient)">
+
+                    <mat-form-field>
+                        <mat-label>Ingredient Name</mat-label>
+                        <input matInput #name="ngModel" type="text" name="name" [(ngModel)]="ingredient.name" [disabled]="!ingredient.isEditable" required placeholder="Name" value={{ingredient.name}}>
+                    </mat-form-field>
+
+                    
+                    <mat-form-field>
+                        <mat-label>Description</mat-label>
+                        <input matInput #description="ngModel" type="text" name="description" [(ngModel)]="ingredient.description" [disabled]="!ingredient.isEditable" required placeholder="Description" value={{ingredient.name}}>
+                    </mat-form-field>
+
+                    <button mat-icon-button color='warn' *ngIf="!ingredient.isEditable" (click)="ingredient.isEditable=!ingredient.isEditable" color="primary" aria-label="Example icon button with a home icon">
+                        <mat-icon class='svg'>icon-edit</mat-icon>
+                    </button>
+
+                    <button mat-icon-button type="submit" *ngIf="ingredient.isEditable" [disabled]="f.form.invalid" color="primary" aria-label="Example icon button with a home icon">
+                        <mat-icon class='svg'>icon-done</mat-icon>
+                    </button>
+
+                    <button mat-icon-button (click)=deleteIngredient(ingredient.id) color="primary" aria-label="Example icon button with a home icon">
+                        <mat-icon class='svg'>icon-delete</mat-icon>
+                    </button>
+                </form>
+            </ng-template>
     </mat-expansion-panel>
 </mat-accordion>
 
