--- a/angular/angular-app/src/app/homepage/homepage.component.html
+++ b/angular/angular-app/src/app/homepage/homepage.component.html
@@ -1,1 +1,10 @@
-<app-banner></app-banner>
+<div class="background">
+    <div class="overlay">
+        <div class="content">
+            <app-banner></app-banner>
+        </div>
+    </div>
+</div>
+
+
+
