--- a/angular/angular-app/src/app/app.component.css
+++ b/angular/angular-app/src/app/app.component.css
@@ -6,3 +6,8 @@ a.mat-stroked-button .mat-icon {
   vertical-align: top;
   font-size: 1.25em;
 }
+
+@font-face {
+  font-family: 'Custom';
+  src: url('/fonts/LibertinusSerif-Semibold.otf') format('opentype');
+}
