--- a/angular/angular-app/src/app/banner/banner.component.html
+++ b/angular/angular-app/src/app/banner/banner.component.html
@@ -1,8 +1,8 @@
-
-    <div class="banner">
-        <div class="banner-text">
-            <p class="title-pre">Welcome to</p> 
-            <p class="title">RecipeBook</p> 
-            <p class="title-post">The cooking app for noobs like you :P </p>
-        </div>
+<div class="banner">
+    <div class="banner-text">
+        <p class="title-pre">Welcome to</p> 
+        <p class="title">RecipeBook</p> 
+        <p class="title-post">The cooking app for noobs like you :P </p>
     </div>
+    <ng-content></ng-content>
+</div>
