--- a/angular/angular-app/src/app/homepage/homepage.component.html
+++ b/angular/angular-app/src/app/homepage/homepage.component.html
@@ -1,16 +1,17 @@
 <div class="background">
-    <div class="overlay">
+    <div class="overlay">       
         <div class="content">
             <app-banner></app-banner>
         </div>
-
-        <div id="wrapper" class="content">
-        <div class="content linkbar">
+        <div class="linkbar">
             <div appStickyFloat (stuck)=onStuck($event) (unstuck)=onUnstuck($event) [ngStyle]="{'box-shadow' : floatContentBar ? '8px 8px 10px #000000' : 'none'}" class="tele">Hello | Test</div>
         </div>
+        <div class="content">
+            <div  style="background-color: black; height: 100vh;"></div>
         </div>
-
-        <div  class="content sticky_sentinel sticky_sentinel--top"></div>  
+        <div class="content">
+            <app-banner></app-banner>
+        </div>
 </div>
 
 
