--- a/angular/angular-app/src/app/navbar/navbar.component.html
+++ b/angular/angular-app/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="navbar">
     <nav>
         <a routerLink="/home">
             <button mat-button class="nav-item" color="primary">
