--- a/angular/angular-app/src/app/homepage/homepage.component.html
+++ b/angular/angular-app/src/app/homepage/homepage.component.html
@@ -12,11 +12,13 @@
             </div>
         </div>
         <div #panel2 class="content">
-            <div  style="background-color: black; height: 100vh;"></div>
+            <div  style="background-color: blue; height: 100vh;"></div>
         </div>
         <div class="content">
             <app-banner></app-banner>
         </div>
+
+        <div class="sentinel sentinel"></div>
 </div>
 
 
